--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>CodeRain</title>
+	<title>The Matrix Code</title>
 	<link rel="stylesheet" href="style.css">
 	<meta name="viewport" content="width=device-width, minimum-scale=1">
 </head>
